test/time_date_facade/invalid/InvalidDateTime.hx
class InvalidDateTime {
	static function main():Void {
		var value = ruby.DateTime.now();
		Sys.println(value);
	}
}
